--- a/practica2/nbproject/project.properties
+++ b/practica2/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Practica2_202210198
-main.class=Practica2_202210198
+main.class=ArenaUSAC
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
